@@ -6,6 +6,7 @@
 
 ADD: center connect dialog on top of main frame/window
 FIX: uncheck confirmTabClose in properties
+FIX: bug id:3158902 (settings folder in user's home directory is not created)
 CHG: removed old images
 
 --- v0.6.2 ----------------------------------------------------- 08/12/2010 ---
